--- a/partials/nav.htm
+++ b/partials/nav.htm
@@ -1,3 +1,4 @@
+[viewBag]
 ==
 <nav id="layout-nav" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
@@ -13,10 +14,10 @@
         <div class="collapse navbar-collapse navbar-main-collapse">
             <ul class="nav navbar-nav navbar-right">
               <li class="{{ 'blog' == currentPage ? 'active' }}">
-                  <a href="{{ 'blog/blog'|page }}">Blog</a>
+                  <a href="{{ 'blog/blog'|page }}">{{ 'Blog'|_ }}</a>
               </li>
               <li class="{{ 'about' == currentPage ? 'active' }}">
-                  <a href="{{ 'samples/about'|page }}">About</a>
+                  <a href="{{ 'samples/about'|page }}">{{ 'About'|_ }}</a>
               </li>
             </ul>
         </div>
