added new page for handling blog categories

--- a/partials/blog/sidebar.htm
+++ b/partials/blog/sidebar.htm
@@ -1,3 +1,10 @@
+[blogCategories]
+slug = "{{ :slug }}"
+displayEmpty = 0
+categoryPage = "blog/category"
+
+[viewBag]
+==
 <!-- Search -->
 <form role="form">
     <div class="well">
@@ -15,11 +22,5 @@
     <div class="panel-heading">
         Categories
     </div>
-    <ul class="list-group filter-list-group">
-        <li class="list-group-item"><a href="#">Databases</a> <span class="badge">13</span></li>
-        <li class="list-group-item"><a href="#">Design</a> <span class="badge">24</span></li>
-        <li class="list-group-item"><a href="#">Hardware</a> <span class="badge">12</span></li>
-        <li class="list-group-item"><a href="#">Management</a> <span class="badge">18</span></li>
-        <li class="list-group-item"><a href="#">Security</a> <span class="badge">2</span></li>
-    </ul>
+    {% component 'blogCategories' %}
 </div>
